# imgui-template

./: CMakeLists.txt  README.md
ext/: CMakeLists.txt  imconfig.h  imgui-sfml.cpp
src/: CMakeLists.txt  main.cpp  map.hpp
test/: CMakeLists.txt  main.cpp  simple_test.cpp
